--- a/src/App.css
+++ b/src/App.css
@@ -286,6 +286,85 @@ font-size: 20px;
     font-weight: bold;
   }
 
+ /*=================================================== Styled Modal =================================================*/
+  .styled-modal {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5);
+    z-index: 150;
+    overflow: auto;
+  }
+
+  .styled-modal .content {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background: #fff;
+    width: 100%;
+    min-width: 20rem;
+    max-width: 30rem;
+    border-radius: 8px;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.3);
+    padding: 20px;
+  }
+
+  .styled-modal .close {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    font-size: 24px;
+    color: #555;
+    cursor: pointer;
+  }
+
+  .styled-modal .title {
+    border-bottom: 2px solid #ddd;
+    padding-bottom: 10px;
+    margin-bottom: 10px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  .styled-modal .title h4 {
+    margin: 0;
+  }
+
+  .styled-modal .body {
+    padding: 10px 0;
+  }
+
+  /* Add transition for smoother effect */
+  .styled-modal .content,
+  .styled-modal .close,
+  .styled-modal .title {
+    transition: 0.3s;
+  }
+
+  /* Hover effect for close button */
+  .styled-modal .close:hover {
+    color: #000;
+  }
+  .styled-modal .footer {
+    border-top: 2px solid #ddd;
+    padding-top: 10px;
+    margin-top: 10px;
+    display: flex;
+    justify-content: flex-end;
+  }
+  .styled-modal .footer button{
+    padding: 1%;
+    border-radius: 1rem;
+    width: 100%;
+    color: #fff;
+    background-color: #000;
+  }
+
   /*=================================================== Footer =================================================*/
 
 
@@ -319,8 +398,10 @@ font-size: 20px;
 .card-body .btn{
   font-size: 20px;
   font-family: 'Roboto', sans-serif;
-  letter-spacing: 0px;
-  
+  letter-spacing: 0px; 
+}
+.card-description{
+  max-height: 10rem;
 }
 .sitesbtn .btn{
   background-color: #ff6608;
@@ -404,3 +485,4 @@ color: #ff6608;
   cursor: pointer;
   font-size: 25px;
  }
+
