--- a/src/App.css
+++ b/src/App.css
@@ -243,23 +243,23 @@ font-size: 20px;
    .modal-content{
     border: 2px solid #ff6608;
     border-radius: 10px;
+    display: flex;
+    align-items: center;
    }
 
    .modal-body{
     text-align: center;
-   }
-   .modal-body ul li{
+    }
+
+    .modal-body ul li{
     margin: 20px 0;
     font-size: 25px;
-   
   
-   }
+    }
   .modal-options {
     width: max-content;
     position: relative;
     cursor: pointer;
-    left: 38%;
-    
   }
   
   .modal-options::after{
@@ -284,6 +284,7 @@ font-size: 20px;
   .fa-solid{
     font-size: 30px;
     font-weight: bold;
+    margin-left: 3rem;
   }
 
  /*=================================================== Styled Modal =================================================*/
@@ -313,16 +314,16 @@ font-size: 20px;
     padding: 20px;
   }
 
-  .styled-modal .close {
+  .styled-modal .content .title{
     position: absolute;
     top: 10px;
-    right: 10px;
+    right: 10%;
     font-size: 24px;
     color: #555;
     cursor: pointer;
   }
 
-  .styled-modal .title {
+  .styled-modal .content .title {
     border-bottom: 2px solid #ddd;
     padding-bottom: 10px;
     margin-bottom: 10px;
